--- a/template/document.tex
+++ b/template/document.tex
@@ -10,6 +10,8 @@
 \input{listoffigures.tex}
 %options for tables
 \input{listoftables.tex}
+% options for tables
+\input{inhaltsverzeichnis.tex}
 
 %renewcommand to apply the font
 \renewcommand\familydefault{\sfdefault}
@@ -24,10 +26,12 @@
 
 %Inhaltsverzeichnis
 \tableofcontents
+\printbibliography
 
 %abbildungen & tabellen
 \listoffigures
 \listoftables
+\printbibliography
 
 \newpage
 
