--- a/template/packages.tex
+++ b/template/packages.tex
@@ -1,4 +1,4 @@
-%use a4paper for a4 paper and size 
+%use a4paper for a4 paper and size
 \usepackage[a4paper,left=30mm,right=30mm,top=30mm, bottom=30mm]{geometry}
 %use german
 \usepackage{german}
@@ -25,4 +25,7 @@
 %use graphicx to add images
 \usepackage{graphicx}
 %use inputenc to set the encoding
-\usepackage[utf8]{inputenc}
+\usepackage[0utf8]{inputenc}
+%use biblatex for references
+\usepackage[backend=biber]{biblatex}
+
