added spelling correction

--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -8,21 +8,6 @@ Welche Auswirkungen haben \acfp{Kfz} auf die Umwelt und wie kann autonomes Fahre
 
 Je mehr \aclp{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung durch \acfp{Kfz} aus.
 
-
-
-\section{TBD}
-
--Kraftfahrzeuge einfluss auf die Umwelt
--steigende Zulassung bei Fahrzeugen durch steigende Globalisierung
--steigende Temperaturen, Feinstaubbelastung
--steigende CO2-Emissionen durch Kfz
--durch bessere Fertigungsmethoden gibt es mehr Autos
--Umweltbelastung durch Umwege
--Umweltbelastung durch Fahrfehler
--Umweltbelastung durch Kfz-Fahrer
--Umweltbelastung durch Staus
--Umweltbelastung durch LKW
-
 \section{Definitionen}
 \subsection{\acfp{Kfz}}
 
@@ -169,6 +154,6 @@ verkehrslärm
 Altfahrzeuge werden nach der Basler Konvention und der Abfallverbringungsverordnung als gefährliche Abfälle eingestuft und dürfen nur in OECD-Länder exportiert werden. Dennoch gibt es immer wieder Berichte (zum Beispiel bei Frontal21[7] am 31. März 2015), dass nicht nur Gebrauchtfahrzeuge, sondern auch Altfahrzeuge aus Deutschland nach Afrika, Nahost und in östlich der EU gelegene Länder exportiert werden. Dort werden sie, obwohl sie sicherheitstechnisch und abgastechnisch nicht mehr den deutschen Anforderungen entsprechen, oft noch lange Zeit gefahren. Viele Zielländer des Exportes von Gebraucht- und/oder Altfahrzeugen haben inzwischen Einschränkungen oder Verbote erlassen, um den unkontrollierten Import von unsicheren und umweltschädlichen Fahrzeugen zu unterbinden.[8]
 
 \subsubsection{Co2 Emissionen}
-Was ist \ac{CO2}?
+Was ist \ac{CO2}? Tast
 Was sind \ac{CO2} Emissionen?
 Natürliche \ac{CO2} Emissionen oder menschliche CO2 Emissionen
