--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -2,14 +2,14 @@
 
 \section{Forschungsfrage}
 
-Welche Auswirkungen haben \acfp{Kfz} auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
+Welche Auswirkungen haben \ac{Kfz} auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
 
 \section{Hypothese}
 
-Je mehr \aclp{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung durch \acfp{Kfz} aus.
+Je mehr \ac{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung durch \ac{Kfz} aus.
 
 \section{Definitionen}
-\subsection{\acfp{Kfz}}
+\subsection{\ac{Kfz}}
 
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
@@ -18,16 +18,17 @@ Je mehr \aclp{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung 
 \aclp{Kfz} können in folgende Kategorien eingeteilt werden\footnote{VERORDNUNG (EU) Nr. 678/2011 DER KOMMISSION
 	vom 14. Juli 2011, TEIL A ABS.1 - https://eur-lex.europa.eu/eli/reg/2011/678/oj?locale=de}:
 \begin{itemize}
-	\item Klasse M (Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge)
-	\item Klasse N (Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge.)
-	\item Klasse O (Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind.)
-	\item Klasse S (unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll)
+	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
+	\item Klasse N: Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge
+	\item Klasse O: Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind
+	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
 \end{itemize}
 
+\newpage
 
 \subsection{Autonomes Fahren}
 
-Beim autonomen Fahren, fährt ein \ac{Kfz} verwaltungsgemäß selbständig.
+Beim autonomen Fahren, fährt ein \ac{Kfz} Verwaltungsgefäß selbständig.
 Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
 \begin{itemize}
 	\item Stufe 0 (Keine Automation)
@@ -38,6 +39,10 @@ Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SA
 	\item Stufe 5 (Vollautomatisierung)
 \end{itemize}
 \subsubsection{Was passiert in den Stufen?}
+Die Stufen unterscheiden sich im wesentlichen nur durch die Anzahl der Automatisierungsgrade.
+
+\vspace{0.5cm}
+
 In der Stufe 0 (Keine Automation):
 \begin{itemize}
 	\item keine Assistenzsysteme
@@ -45,13 +50,17 @@ In der Stufe 0 (Keine Automation):
 	\item Fahrer ist unter permanenter Kontrolle
 \end{itemize}
 
+\vspace{0.5cm}
+
 In der Stufe 1 (Assistenzsysteme):
 \begin{itemize}
-	\item Assistenzsysteme wie Geschwindigkeitsregelanlage oder eine Berganfahrhilfe
+	\item Assistenzsysteme wie \ac{GRA} oder eine Berganfahrhilfe
 	\item Fahrer hat eine passive Unterstützung bei Fahraufgaben
 	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
 	\item Fahrer ist unter permanenter Kontrolle
 \end{itemize}
+
+\vspace{0.5cm}
 
 In der Stufe 2 (Teilautomatisierung):
 \begin{itemize}
@@ -66,6 +75,8 @@ In der Stufe 2 (Teilautomatisierung):
 	\item Fahrer muss jeder Zeit die Fahraufgabe übernehmen können
 \end{itemize}
 
+\vspace{0.5cm}
+
 In der Stufe 3 (Bedingte Automatisierung):
 \begin{itemize}
 	\item hochautomatisierte Assistenzsysteme
@@ -74,6 +85,8 @@ In der Stufe 3 (Bedingte Automatisierung):
 	\item Fahrer muss innerhalb wenigen Sekunden die Fahraufgabe übernehmen können
 \end{itemize}
 
+\vspace{0.5cm}
+
 In der Stufe 4 (Hochautomatisierung):
 \begin{itemize}
 	\item hochautomatisierte Assistenzsysteme
@@ -81,6 +94,8 @@ In der Stufe 4 (Hochautomatisierung):
 	\item Fahrer dauerhaft von den Fahraufgaben abwenden
 	\item Fahrer muss fahrtüchtig sein, um im Bedarfsfall die Fahraufgabe übernehmen zu können
 \end{itemize}
+
+\vspace{0.5cm}
 
 In der Stufe 5 (Vollautomatisierung):
 \begin{itemize}
@@ -97,6 +112,9 @@ In der Stufe 5 (Vollautomatisierung):
 
 Einfluss ist eine Wirkung auf ein Subjekt, das eine bestimmte Umweltbedingung erfüllt.
 
+Umwelteinflüsse sind daher eine Wirkung auf Lebewesen.
+\newline
+\newline
 Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
 \begin{itemize}
 	\item benötigte Flächen, für Infrastruktur, Parkplätze \ac{usw}
@@ -111,21 +129,48 @@ Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
 
 \subsection{Feinstaub}
 
-Als Feinstaub bezeichnet man Teilchen in der Luft die nicht sofot zu Boden fliegen.
-\newline
-Feinstaub kann nicht mit dem bloßen Auge wargenommen werden.
+Feinstaub kann natürlichen Ursprungs sein oder durch menschliches Handeln erzeugt werden,
+und wird in die Kategorien primär und sekundär unterteilt.
+
+Der primäre Feinstaub entsteht direkt aus der Quelle wie durch eine Verbrennung.  
+
+Der sekundäre Feinstaub entsteht durch eine chemische Reaktionen in der Atmosphäre aus gasförmigen Substanzen, wie Schwefel- und Stickstoffoxiden, Ammoniak oder Kohlenwasserstoffen.
+
+Wichtige durch menschliches Handeln verursachte Feinstaubquellen sind: 
+\begin{itemize}
+	\item \acfp{Kfz}
+	\item Kraft- und Fernheizwerke
+	\item Abfallverbrennungsanlagen
+	\item Heizungen in Wohnhäusern
+	\item bestimmte Industrieprozesse
+\end{itemize}
+
+In urbanen Regionen sind vor allem der Straßenverkehr und Bautätigkeiten große Feinstaubquellen.
+
+Hierbei entsteht Feinstaub nicht nur aus dem Verbrennungsprozess in die Luft, sondern auch durch Bremsen-, Reifen- und Fahrbahnabrieb. 
+Auch Aufwirbelungen des Staubes von der Straßenoberfläche tragen dazu bei. 
+Wichtige natürliche Quellen für Feinstaub sind Emissionen aus Vulkanen und Meeren aber auch die Bodenerosionen, Wald- und Buschfeuer oder bestimmte biogene Gemische von Viren, Sporen, Bakterien oder Pilzen.
+
+
+
+
+
+
+
 
 flüchtiger organischer Verbindungen (VOCs), \ac{NO}, \ac{CO} sowie dem Treibhausgas \ac{CO2} \ac{NOX}
 Reifenabrieb, Bodenerosionen und Staubaufwirbelung, erzeugen Autos zudem Feinstaub
-Darüber hinaus trägt der Autoverkehr maßgeblich zur Bildung von bodennahem Ozon bei. In Kombination mit UV-Strahlen, entstehen aus sogenannten primären Schadstoffen, wie Stickoxid und Kohlenmonoxid, gefährliche Photooxidantien – darunter Ozon. Davon abzugrenzen ist allerdings das Ozon in der Stratosphäre, wo es uns vor schädlicher UV-Strahlung schützt.
-In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-u-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
+Darüber hinaus trägt der Autoverkehr maßgeblich zur Bildung von bodennahem Ozon bei. 
+In Kombination mit UV-Strahlen, entstehen aus sogenannten primären Schadstoffen, wie Stickoxid und Kohlenmonoxid, gefährliche Photooxidantien – darunter Ozon. 
+Davon abzugrenzen ist allerdings das Ozon in der Stratosphäre, wo es uns vor schädlicher UV-Strahlung schützt.
+In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-u-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. 
+Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
 Folgen für Mensch und Umwelt
 Die Schadstoffemission durch den Verkehr, hat gravierende Folgen für Menschen und Umwelt.
 
 Dazu zählen:
-
-gesundheitliche Probleme, z.B.
-Erkrankungen der Atemwege, z.B. Asthma
+Gesundheitliche Probleme
+Erkrankungen der Atemwege
 Kopfschmerzen und Konzentrationsschwäche
 Einschränkung der Leistungsfähigkeit
 Herz-Kreislauf-Erkrankungen
