--- a/template/02_hauptteil/hauptteil.tex
+++ b/template/02_hauptteil/hauptteil.tex
@@ -8,29 +8,21 @@ Aufteilung der \ac{Kfz} in die Fahrzeug Kategorien.
 
 Anteile der Stufen die im Verkehr unterwegs sind
 
+\subsection{Voraussichtliche Verteilung der Fahrzeuge künftig}
 
-\subsection{Größte produzenten von Freinstaub}
+\subsection{Produzenten von Freistaub}
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
+Warum wird Freistaub produziert?
+Wer produziert am meisten Freistaub?
+Wann wird am meisten Freistaub produziert?
+Wann wird am wenigsten Freistaub produziert?
 
+\subsection{Problemsituationen}
 
-\subsection{Ethische Problemsituationen}
+Warum ist Feinstaub überhaupt ein Problem?
+Warum sind KFZ ein Problem?
+Warum sind nicht autonom Fahrende KFZ ein Problem?
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
 
 \section{These im Detail}
 
