--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -5,6 +5,8 @@
 	\acro{Nfz}{\textit{Nutzfahrzeug}}
 	\acro{Pkw}{\textit{Personenkraftwagen}}
 	\acro{SAE}{\textit{Society of Automotive Engineers}}
+	\acro{GRA}{\textit{Geschwindigkeitsregelanlage}}
+
 
 	\acro{CO2}[CO\textsubscript{2}]{\textit{Kohlenstoffdioxid}}
 	\acro{CO}{\textit{Kohlenmonoxid}}
