--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -9,7 +9,7 @@ Welche Auswirkungen haben \ac{Kfz} auf die Umwelt und wie kann autonomes Fahren 
 Je mehr \ac{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung durch \ac{Kfz} aus.
 
 \section{Definitionen}
-\subsection{\ac{Kfz}}
+\subsection{Kraftfahrzeuge}
 
 \textit{Als Kraftfahrzeuge im Sinne dieses Gesetzes gelten Landfahrzeuge, die durch Maschinenkraft bewegt werden, ohne an Bahngleise gebunden zu sein.}
 \footnote{Straßenverkehrsgesetz, § 1 Abs. 2}
@@ -105,7 +105,6 @@ In der Stufe 5 (Vollautomatisierung):
 	\item alle Personen im Wagen werden zu Passagieren
 \end{itemize}
 
-
 \subsection{Umwelteinflüsse}
 
 \textit{Umwelt bezeichnet etwas, mit dem ein Lebewesen in Beziehungen steht.}\footnote{Ludwig Trepl: Allgemeine Ökologie. Band 1: Organismus und Umwelt. Frankfurt/M., Lang: 106ff.; vgl. 1. Uexküll, Jakob von 1909: Umwelt und Innenwelt der Tiere. Springer, Berlin 2005.}
@@ -134,7 +133,8 @@ und wird in die Kategorien primär und sekundär unterteilt.
 
 Der primäre Feinstaub entsteht direkt aus der Quelle wie durch eine Verbrennung.  
 
-Der sekundäre Feinstaub entsteht durch eine chemische Reaktionen in der Atmosphäre aus gasförmigen Substanzen, wie Schwefel- und Stickstoffoxiden, Ammoniak oder Kohlenwasserstoffen.
+Der sekundäre Feinstaub entsteht durch eine chemische Reaktionen in der Atmosphäre aus gasförmigen Substanzen, 
+wie Schwefel- und Stickstoffoxiden, Ammoniak oder Kohlenwasserstoffen.
 
 Wichtige durch menschliches Handeln verursachte Feinstaubquellen sind: 
 \begin{itemize}
@@ -148,57 +148,6 @@ Wichtige durch menschliches Handeln verursachte Feinstaubquellen sind:
 In urbanen Regionen sind vor allem der Straßenverkehr und Bautätigkeiten große Feinstaubquellen.
 
 Hierbei entsteht Feinstaub nicht nur aus dem Verbrennungsprozess in die Luft, sondern auch durch Bremsen-, Reifen- und Fahrbahnabrieb. 
-Auch Aufwirbelungen des Staubes von der Straßenoberfläche tragen dazu bei. 
-Wichtige natürliche Quellen für Feinstaub sind Emissionen aus Vulkanen und Meeren aber auch die Bodenerosionen, Wald- und Buschfeuer oder bestimmte biogene Gemische von Viren, Sporen, Bakterien oder Pilzen.
-
-
-
-
-
-
-
-
-flüchtiger organischer Verbindungen (VOCs), \ac{NO}, \ac{CO} sowie dem Treibhausgas \ac{CO2} \ac{NOX}
-Reifenabrieb, Bodenerosionen und Staubaufwirbelung, erzeugen Autos zudem Feinstaub
-Darüber hinaus trägt der Autoverkehr maßgeblich zur Bildung von bodennahem Ozon bei. 
-In Kombination mit UV-Strahlen, entstehen aus sogenannten primären Schadstoffen, wie Stickoxid und Kohlenmonoxid, gefährliche Photooxidantien – darunter Ozon. 
-Davon abzugrenzen ist allerdings das Ozon in der Stratosphäre, wo es uns vor schädlicher UV-Strahlung schützt.
-In Großstädten, wo der Verkehr dicht und der Treibstoffverbrauch durch ein stetiges Stop-u-Go erhöht ist, ist die Umweltbelastung durch Autoabgase besonders hoch. 
-Bei ungünstigen, windstillen Wetterlagen kann die Luftverschmutzung hier zeitweise so stark werden, dass es zu Smog kommt.
-Folgen für Mensch und Umwelt
-Die Schadstoffemission durch den Verkehr, hat gravierende Folgen für Menschen und Umwelt.
-
-Dazu zählen:
-Gesundheitliche Probleme
-Erkrankungen der Atemwege
-Kopfschmerzen und Konzentrationsschwäche
-Einschränkung der Leistungsfähigkeit
-Herz-Kreislauf-Erkrankungen
-Krebs
-Smog
-Klimawandel
-Umweltverschmutzung, z.B. Eutrophierung von Gewässern und Böden
-dadurch Beeinträchtigung der Ökosysteme
-Ernteschäden durch Ozonbelastung
-Beschädigung von Kulturgütern und Baumaterialien
-
-
-Feinstaubpartikel der Fraktion PM0,1 sind so klein, dass sie nicht nur in unsere Lungenbläschen gelangen, sondern sogar in die Blutlaufbahn. Dadurch können langfristig Herzinfarkte oder Schlaganfälle ausgelöst werden. Dieselruß hingegen, setzt sich in den Schleimhäuten und im Lungengewebe fest, wo sie bei dauerhafter Belastung zu Entzündungen führen[2,3].
-
-Ozon als sekundär gebildeter Luftschadstoff, ist in höheren Konzentrationen toxisch und reizt Atemwege und Schleimhäute. Es gilt als Reizgas und ist insbesondere während langanhaltenden heißen Sommertagen in Städten ein Problem.
-
-
-
-Eine weitere Umweltbelastung stellt das durch Autos emittierte Treibhausgas CO2 dar. Dieses ist zwar ungiftig und birgt somit keine (direkte) gesundheitliche Gefahr, jedoch trägt es maßgeblich zum Klimawandel bei.
-
-Zusätzlich zur Luftverschmutzung führen Autos außerdem zu vielen anderen Problemen. Der Straßenverkehr benötigt kostbare Bodenfläche, verlangt viel Energie und führt zudem zu Lärmverschmutzung mit gesundheitlichen Folgen. So kann chronische Lärmbelastung unter anderem zu Hörschäden und Stress führen[1].
-
-verkehrslärm
-
-
-Altfahrzeuge werden nach der Basler Konvention und der Abfallverbringungsverordnung als gefährliche Abfälle eingestuft und dürfen nur in OECD-Länder exportiert werden. Dennoch gibt es immer wieder Berichte (zum Beispiel bei Frontal21[7] am 31. März 2015), dass nicht nur Gebrauchtfahrzeuge, sondern auch Altfahrzeuge aus Deutschland nach Afrika, Nahost und in östlich der EU gelegene Länder exportiert werden. Dort werden sie, obwohl sie sicherheitstechnisch und abgastechnisch nicht mehr den deutschen Anforderungen entsprechen, oft noch lange Zeit gefahren. Viele Zielländer des Exportes von Gebraucht- und/oder Altfahrzeugen haben inzwischen Einschränkungen oder Verbote erlassen, um den unkontrollierten Import von unsicheren und umweltschädlichen Fahrzeugen zu unterbinden.[8]
-
-\subsubsection{Co2 Emissionen}
-Was ist \ac{CO2}? Tast
-Was sind \ac{CO2} Emissionen?
-Natürliche \ac{CO2} Emissionen oder menschliche CO2 Emissionen
+Auch die Aufwirbelungen des Staubes von der Straßenoberfläche tragen dazu bei. 
+Wichtige natürliche Quellen für Feinstaub sind Emissionen aus Vulkanen und Meeren aber durch Bodenerosionen, Wald- und Buschfeuer oder 
+bestimmte biogene Gemische von Viren, Sporen, Bakterien oder Pilzen.
