--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -2,11 +2,11 @@
 
 \section{Forschungsfrage}
 
-Welche Auswirkungen haben \ac{Kfz} auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
+Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
 
 \section{Hypothese}
 
-Je mehr \ac{Kfz} autonom fahren, desto geringer fällt die Feinstaubbelastung durch \ac{Kfz} aus.
+Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus.
 
 \section{Definitionen}
 \subsection{Kraftfahrzeuge}
@@ -112,8 +112,8 @@ In der Stufe 5 (Vollautomatisierung):
 Einfluss ist eine Wirkung auf ein Subjekt, das eine bestimmte Umweltbedingung erfüllt.
 
 Umwelteinflüsse sind daher eine Wirkung auf Lebewesen.
-\newline
-\newline
+
+\vspace{.5cm}
 Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
 \begin{itemize}
 	\item benötigte Flächen, für Infrastruktur, Parkplätze \ac{usw}
@@ -121,7 +121,7 @@ Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
 	\item der Ausstoß von Gasen die \ac{zb} durch Verbrennung von Kraftstoff oder beim Laden einer Batterie entstehen
 	\item der Verlust von Betriebsmitteln durch Leckage an Systemen
 	\item der Ausstoß von festen Stoffe wie \ac{ua} Bremsstaub oder Abrieb der Reifen der beim Bremsen entsteht
-	\item Wärme und Schall durch die Umwadlung von Energie oder Reibung von Komponenten die beim Betrieb des \ac{Kfz} entstehen
+	\item Wärme und Schall durch die Umwallung von Energie oder Reibung von Komponenten die beim Betrieb des \ac{Kfz} entstehen
 	\item Licht zur Beleuchtung der Fahrbahn oder Absicherung der Verkehrsführung
 \end{itemize}
 
