added some questions

--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -1,11 +1,14 @@
+
 \chapter{Einleitung der Arbeit}
+!!! Überprüfen ob das richtig ist
+\section{Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt?}
 
-\section{Forschungsfrage}
+\section{Wie kann autonomes Fahren die negativen Auswirkungen reduzieren?}
 
-Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
+
 
 \section{Hypothese}
-
+!!! Wo muss die Hypothese hin?
 Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus.
 
 \section{Definitionen}
@@ -24,9 +27,15 @@ Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelast
 	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
 \end{itemize}
 
+!!! Welche Auswirkungen haben die Klassen auf die Umwelt?
+!!! Wie groß ist der Anteil der Kraftfahrzeuge in den Klassen?
 \newpage
 
 \subsection{Autonomes Fahren}
+
+!!! Was sind autonome fahrzeuge?
+!!! Welche Autonom Fahrzeuge gibt es auf die Klassen gesehen?
+
 
 Beim autonomen Fahren, fährt ein \ac{Kfz} Verwaltungsgefäß selbständig.
 Für \ac{Kfz} wurden von der \ac{SAE} Institut in der Norm SAE J3016\footnote{SAE J3016\textunderscore202104 - https://www.sae.org/standards/content/j3016\textunderscore202104} Automatisierungsgrade definiert.
@@ -57,7 +66,7 @@ In der Stufe 1 (Assistenzsysteme):
 	\item Assistenzsysteme wie \ac{GRA} oder eine Berganfahrhilfe
 	\item Fahrer hat eine passive Unterstützung bei Fahraufgaben
 	\item \ac{Kfz} kann keine Fahraufgaben übernehmen
-	\item Fahrer ist unter permanenter Kontrolle
+	\item das \ac{Kfz} ist unter permanenter Kontrolle des Fahrers
 \end{itemize}
 
 \vspace{0.5cm}
@@ -127,9 +136,12 @@ Unter Umwelteinflüssen von \ac{Kfz} fallen \ac{ua}:
 
 
 \subsection{Feinstaub}
+!!! Warum entsteht Feinstaub?
+!!! Wann und wie entsteht Feinstaub?
 
-Feinstaub kann natürlichen Ursprungs sein oder durch menschliches Handeln erzeugt werden,
-und wird in die Kategorien primär und sekundär unterteilt.
+
+Feinstaub entsteht durch natürlichen Ursprung oder wird durch menschliches Handeln erzeugt.
+
 
 Der primäre Feinstaub entsteht direkt aus der Quelle wie durch eine Verbrennung.  
 
@@ -138,7 +150,7 @@ wie Schwefel- und Stickstoffoxiden, Ammoniak oder Kohlenwasserstoffen.
 
 Wichtige durch menschliches Handeln verursachte Feinstaubquellen sind: 
 \begin{itemize}
-	\item \acfp{Kfz}
+	\item \ac{Kfz}
 	\item Kraft- und Fernheizwerke
 	\item Abfallverbrennungsanlagen
 	\item Heizungen in Wohnhäusern
@@ -151,3 +163,4 @@ Hierbei entsteht Feinstaub nicht nur aus dem Verbrennungsprozess in die Luft, so
 Auch die Aufwirbelungen des Staubes von der Straßenoberfläche tragen dazu bei. 
 Wichtige natürliche Quellen für Feinstaub sind Emissionen aus Vulkanen und Meeren aber durch Bodenerosionen, Wald- und Buschfeuer oder 
 bestimmte biogene Gemische von Viren, Sporen, Bakterien oder Pilzen.
+
